# pydantic-lambda-handler

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  requirements.in  setup.cfg  tasks.py  tox.ini
.github/workflows/: main.yml
demo_app/: app.py  cdk_conf.json  open_api_spec.json
demo_app/demo_app/: demo_app.py  demo_app_handlers.py  demo_app_stack.py  lambda_construct.py  open_api_spec.json
demo_app/demo_app/subfolder/: a_file.py
demo_app/src/: demo_app.py  demo_app_handlers.py  demo_app_stack.py  handler_app.py
demo_app/src/handlers/: response_model_handlers.py
demo_app/src/models/: db_model.py
demo_app/src/subfolder/: headers_handlers.py  path_parameters_handlers.py  query_parameters_handlers.py  response_model_handlers.py
docs/: readme.md
experiments/: tutorial.py
pydantic_lambda_handler/: main.py  requirements.in
src/: pydantic_lambda_hander.py  requirements.txt
src/pydantic_lambda_handler/: __init__.py  gen_open_api_inspect.py  main.py  models.py  params.py
src/pydantic_lambda_handler/hooks/: cdk_conf_hook.py  open_api_gen_hook.py
tests/: conftest.py  requirements.in  requirements.txt  test_cdk_generation.py  test_headers.py  test_open_api_generation.py  test_path_parameters.py  test_response.py  test_somthing.py
tests/demo/: app.py  demo_app.py
tests/demo/subfolder/: a_file.py
