[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydantic_lambda_handler"
authors = [{name = "Mark Harvey", email = "inspiredharvey@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/harvey251/pydantic-lambda-handler"



[tool.semantic_release]
version_variable = "dynamo_orm/__init__.py:__version__"
build_command = "pip install flit && flit build"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"