[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydantic_lambda_handler"
authors = [{name = "Mark Harvey", email = "inspiredharvey@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "boto3>=1.24.21",
    "orjson>=3.7.5",
    "pydantic>=1.9.1",
    "boto3>=1.20.32",
    "botocore>=1.23.32",
]

[project.optional-dependencies]
tests = [
  'coverage>=5.0.3',
  'pytest',
  'pytest-benchmark[histogram]>=3.2.1',
]

[project.urls]
Home = "https://github.com/harvey251/pydantic-lambda-handler"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.semantic_release]
version_variable = "src/pydantic_lambda_handler/__init__.py:__version__"
build_command = "pip install flit && flit build"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"